# automata

./: CMakeLists.txt  common.c  common.h  poprawki.patch  protocol.c  protocol.h  run.c  spawner.c  spawner.h  splaszczanie.patch  test.patch  tester.c  validator.c
